@@ -4525,3 +4525,4 @@ Changelog for GXemul:
 		instructions from 4.0.1 to 5.0.2, and the NetBSD/algor install
 		instructions from 3.1 to 5.0.2.
 20110212	Updating the NetBSD/pmax install instructions: 5.0.2 -> 5.1.
+		Updating OpenBSD/landisk instructions: 4.7 -> 4.8.
